# portfolio-rs

./: Cargo.toml  LICENSE  README.md
src/: main.rs  parse_portfolio.rs  portfolio.json
src/resources/: portfolio.toml
