[package]
name = "portfolio-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.40", features = ["serde"] }
poem = { version = "^3.1.7", features = ["server", "compression", "native-tls", "opentelemetry", "static-files"] }
serde = { version = "^1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = {version = "^1", features = ["full"]}
toml = "0.8.20"
